# rust_sort

./: .gitignore  Cargo.toml  report.tex
benches/: benchmarks.rs  bubble.rs  insertion.rs  insertion_worst_case.rs  merge.rs  merge_2T.rs  merge_2T_best.rs  merge_2T_big.rs  merge_2T_big_best.rs  merge_2T_big_worst.rs  merge_2T_worst.rs  merge_4T.rs  merge_4T_best.rs  merge_4T_big.rs  merge_4T_big_best.rs  merge_4T_big_worst.rs  merge_4T_worst.rs  merge_8T.rs  merge_8T_best.rs  merge_8T_big.rs  merge_8T_big_best.rs  merge_8T_big_worst.rs  merge_8T_worst.rs  merge_best.rs  merge_big.rs  merge_big_best.rs  merge_big_worst.rs  merge_threaded.rs  merge_worst.rs  optimized_merge.rs  optimized_merge_threaded.rs  quick.rs  quick_2T.rs  quick_4T.rs  quick_8T.rs  quick_opt.rs  quick_opt_worst_case.rs  quick_worst_case.rs  rust_stable.rs  rust_stable_big.rs  (+3 more)
src/: lib.rs
