[package]
name = "sort"
version = "0.1.0"
authors = ["Caleb Boylan <calebboylan@gmail.com>"]
autobenches = false

[dependencies]
rand = "0.5.5"
crossbeam = "0.4.1"
rayon = "1.0.2"

[dev-dependencies]
criterion = "0.1.2"

[[bench]]
name = "insertion"
harness = false

#[[bench]]
#name = "insertion_worst_case"
#harness = false

[[bench]]
name = "selection"
harness = false

[[bench]]
name = "bubble"
harness = false

[[bench]]
name = "merge"
harness = false

#[[bench]]
#name = "optimized_merge_threaded"
#harness = false

#[[bench]]
#name = "optimized_merge"
#harness = false

[[bench]]
name = "merge_threaded"
harness = false

[[bench]]
name = "rust_stable"
harness = false

[[bench]]
name = "rust_unstable"
harness = false
