[package]
name = "sort"
version = "0.1.0"
authors = ["Caleb Boylan <calebboylan@gmail.com>"]
autobenches = false

[dependencies]
rand = "0.5.5"
crossbeam = "0.4.1"

[dev-dependencies]
criterion = "0.2.5"

[[bin]]
name = "mybin"
path = "bin/main.rs"

[[bench]]
name = "insertion"
harness = false

#[[bench]]
#name = "insertion_worst_case"
#harness = false

[[bench]]
name = "selection"
harness = false

[[bench]]
name = "bubble"
harness = false

[[bench]]
name = "quick"
harness = false

[[bench]]
name = "quick_opt"
harness = false

[[bench]]
name = "quick_worst_case"
harness = false

[[bench]]
name = "quick_opt_worst_case"
harness = false

[[bench]]
name = "merge"
harness = false

[[bench]]
name = "merge_2T"
harness = false

[[bench]]
name = "merge_4T"
harness = false

[[bench]]
name = "merge_8T"
harness = false

[[bench]]
name = "rust_stable"
harness = false

[[bench]]
name = "rust_unstable"
harness = false
